--- a/docs/latex/main.tex
+++ b/docs/latex/main.tex
@@ -1163,6 +1163,14 @@ Sarà specificato per ogni Mock-Up il tipo e la funzionalità di ogni componente
 \end{figure}
 \FloatBarrier
 
+\begin{figure}[!htpb]
+	\centering
+	\includesvg[width=\textwidth, height=21cm]{./diagrams/ecb/dettagli-segnalazione.svg}
+	\caption{Dettagli segnalazione e eliminazione segnalazione}
+\end{figure}
+\FloatBarrier
+
+
 \newpage
 \subsection{Diagrammi di sequenza di analisi}
 Sono presentati nella seguente sezione i Sequence Diagram relativi a due funzionalità offerte dall'applicazione:
